<resources>
    <string name="app_name">LostAndFoundApplication</string>
    <string name="email_address">Email address</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_logo">Sign up logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_new_account">Create new account</string>
    <string name="incorrect_password_please_try_again">Incorrect Password. Please try again.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">Name:</string>
    <string name="found_address">Found Address:</string>
    <string name="date_found">Date Found:</string>
    <string name="founder">Founder:</string>
    <string name="post_date">Post Date:</string>
    <string name="item_description">Item Description:</string>
    <string name="item_description_optional">Item Description: (Optional)</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="returnitem">Return</string>
    <string name="item_image">Item Image</string>
    <string name="title">Title:</string>
    <string name="edit">Edit</string>
    <string name="change_profile_photo"><u>Change profile photo</u></string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_password"><u>Edit</u></string>
    <string name="pickup_address">Pickup Address:</string>
    <string name="pickup_contact">Pickup Contact:</string>
    <string name="pickup_contact_optional">Pickup Contact: (Optional)</string>
    <string name="pickup_address_optional">Pickup Address: (Optional)</string>
    <string name="post_item_image">Post item image</string>
    <string name="founder_contact">Founder Contact:</string>
    <string name="tap_to_choose_image">Tap to choose image</string>
    <string name="item_has_already_returned">Item has already returned.</string>
</resources>
