<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".Activity.ProfilePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/action_bar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="#2F73C4">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="160dp"
                    android:id="@+id/profileImage"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/profile_image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/changeProfileImg"
                    android:text="@string/change_profile_photo"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="#111E49"
                    android:onClick="changeProfileImgOnClicked"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameTextView"
            android:fontFamily="@font/roboto_light"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameTextView"
            android:fontFamily="@font/roboto_light"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView"
            android:fontFamily="@font/roboto_light"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editPassword"
                android:text="@string/edit_password"
                android:fontFamily="@font/roboto_light"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:onClick="editPasswordOnClicked"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextView"
            android:fontFamily="@font/roboto_light"
            android:textColor="#000000"
            android:textSize="18sp"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/slideMenu"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_slidemenu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>