<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginPage"
    android:background="@drawable/backgroundapp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/app_logo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:alpha=".5"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:id="@+id/emailAddressEditText"
                android:background="@drawable/input_box"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:alpha=".5"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:id="@+id/passwordEditText"
                android:background="@drawable/input_box"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="#771010"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/errorTextView"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shadow"
                android:backgroundTint="#2377EF"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:elevation="2dp"
                android:id="@+id/signInBtn"
                android:onClick="signInBtnClicked"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shadow"
                android:backgroundTint="#48ADF9"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/create_new_account"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:elevation="2dp"
                android:id="@+id/createNewAccBtn"
                android:onClick="createNewAccBtnClicked"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="#ffffff"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>